Update to 0.9.0